{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 34,
  "lineage": "4d955121-13f9-b84c-809d-fb8e39716817",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webservers-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/zones/us-central1-a/instanceGroups/demo-webservers",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2023-02-03T00:54:15.711-08:00",
            "enable_cdn": false,
            "fingerprint": "rQI2mK9dSCU=",
            "generated_id": 2129248083327939928,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/healthChecks/webservers-health-check"
            ],
            "id": "projects/fluid-keyword-376303/global/backendServices/webservers-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webservers-backend-service",
            "port_name": "http",
            "project": "fluid-keyword-376303",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/backendServices/webservers-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.web",
            "google_compute_instance_group.webservers",
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-pub-subnet",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "load_balancer_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-02T23:41:35.825-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fluid-keyword-376303/global/firewalls/my-demo-lb",
            "log_config": [],
            "name": "my-demo-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
            "priority": 1000,
            "project": "fluid-keyword-376303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/firewalls/my-demo-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nginx-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "webservers-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-02-03T00:55:05.809-08:00",
            "id": "projects/fluid-keyword-376303/regions/us-central1/forwardingRules/website-forwarding-rule",
            "ip_address": "35.209.229.216",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "website-forwarding-rule",
            "network_tier": "STANDARD",
            "port_range": "80",
            "project": "fluid-keyword-376303",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/forwardingRules/website-forwarding-rule",
            "target": "projects/fluid-keyword-376303/global/targetHttpProxies/website-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.web",
            "google_compute_instance_group.webservers",
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-pub-subnet",
            "google_compute_target_http_proxy.my-http-proxy",
            "google_compute_url_map.my-url-map",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "app"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/zones/us-central1-a/disks/app-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fluid-keyword-376303/zones/us-central1-a/instances/app-server",
            "instance_id": "8755246718170235949",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "DHd6T-7p7XU=",
            "name": "app-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-private-subnet",
                "subnetwork_project": "fluid-keyword-376303"
              }
            ],
            "project": "fluid-keyword-376303",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/zones/us-central1-a/instances/app-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-private-subnet",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "web"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/zones/us-central1-a/disks/web"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fluid-keyword-376303/zones/us-central1-a/instances/web",
            "instance_id": "6907346337670431790",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "1iR6zfMmOYQ=",
            "metadata_startup_script": "   #!/bin/bash\n   apt update -y\n   apt install apache2 -y\n   echo \"\u003ch2\u003eWelcome to Apache Webserver !!!\u003c/h2\u003e\" \u003e /var/www/html/index.html\n   systemctl restart apache2\n",
            "name": "web",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.246.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-pub-subnet",
                "subnetwork_project": "fluid-keyword-376303"
              }
            ],
            "project": "fluid-keyword-376303",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/zones/us-central1-a/instances/web",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-pub-subnet",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fluid-keyword-376303/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "fluid-keyword-376303",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc"
          },
          "dependencies": [
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_network_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/fluid-keyword-376303/global/routes/private-network-internet",
            "name": "private-network-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "fluid-keyword-376303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/routes/private-network-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "my-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-02T23:41:36.842-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/fluid-keyword-376303/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
            "project": "fluid-keyword-376303",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "my-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "fluid-keyword-376303/us-central1/my-router/my-nat-router",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "fluid-keyword-376303",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_compute_router.my-router",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-02T23:41:37.015-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fluid-keyword-376303",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my-pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-02T23:41:36.907-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-pub-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-pub-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fluid-keyword-376303",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/regions/us-central1/subnetworks/my-pub-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my-vpc",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "my-http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-03T00:54:50.508-08:00",
            "id": "projects/fluid-keyword-376303/global/targetHttpProxies/website-proxy",
            "name": "website-proxy",
            "project": "fluid-keyword-376303",
            "proxy_bind": false,
            "proxy_id": 4675342861476132149,
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/targetHttpProxies/website-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/urlMaps/website-map"
          },
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.web",
            "google_compute_instance_group.webservers",
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-pub-subnet",
            "google_compute_url_map.my-url-map",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "my-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-03T00:54:38.301-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/backendServices/webservers-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "2o-Pn-bQh08=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/fluid-keyword-376303/global/urlMaps/website-map",
            "map_id": 8622139776087192865,
            "name": "website-map",
            "path_matcher": [],
            "project": "fluid-keyword-376303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluid-keyword-376303/global/urlMaps/website-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.web",
            "google_compute_instance_group.webservers",
            "google_compute_network.my-vpc",
            "google_compute_subnetwork.my-pub-subnet",
            "google_project_service.compute_service"
          ]
        }
      ]
    }
  ]
}